--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ a {
 }
 
 .btn {
-  text-transform: uppercase;
   margin: 35px auto;
   padding: 10px;
   border: 1px solid rgba(0,0,0,.29);
@@ -42,10 +41,6 @@ a {
 .center {
   text-align: center;
   margin: auto;
-}
-
-.active {
-  font-weight: bold;
 }
 
 .nav ul {
@@ -74,7 +69,7 @@ li {
   margin: 10px;
 }
 
-.tweet {
+.question {
   width: 100%;
   max-width: 590px;
   padding: 10px;
@@ -84,61 +79,14 @@ li {
   background-color: floralwhite;
 }
 
-.tweet-info {
+.question-info {
   margin: 20px;
   display: flex;
   flex-direction: column;
 }
 
-/* Hacky but less typing in the video */
-.tweet-info > div > span:first-child {
-  font-weight: bold;
-  margin-right: 5px;
-}
-.tweet-info > div > span:nth-child(2) {
-  color: #969696;
-  font-size: 16px;
-}
-.tweet-info > div > div {
-  color: #969696;
-  font-size: 15px;
-}
-.tweet-info > div > p {
-  font-size: 18px;
-  margin: 10px 0;
-}
-.tweet-icons {
-  display: flex;
-  align-items: center;
-}
-.tweet-icons > span {
-  color: #969696;
-  margin: 0 15px 0 5px;
-  font-size: 18px !important;
-}
-.tweet-icon {
-  font-size: 27px;
-  color: #697784;
-}
-.tweet-icon:hover {
-  color: #00b5d6;
-  cursor: pointer;
-}
-.replying-to {
-  border: none;
-  background: transparent;
-  margin: 0;
-  padding: 0;
-  color: #969696;
-  cursor: pointer;
-}
 
-.heart-button {
-  background: transparent;
-  border: none;
-}
-
-.new-tweet {
+.new-question {
   width: 100%;
   max-width: 590px;
   margin: 0 auto;
@@ -155,7 +103,7 @@ li {
   background-color: white;
 }
 
-.tweet-length {
+.question-length {
   text-align: right;
   margin-top: 10px;
   font-size: 20px;
@@ -166,6 +114,7 @@ li {
   padding: 10px;
   margin: 10px;
   background-color: floralwhite;
+  width: 100px;
 }
 
 .voteButton {
